Fixed problem with some hidden things hat were not going visible..

--- a/TV5-VolunteerEventMgmtApp/wwwroot/css/site.css
+++ b/TV5-VolunteerEventMgmtApp/wwwroot/css/site.css
@@ -52,6 +52,10 @@ form label {
     min-width: 80px;
 }
 
+#pag-nav .btn {
+    min-width: 50px !important;
+}
+
 /*btn-purple*/
 .btn-purple {
     background: var(--purple);
@@ -198,16 +202,13 @@ select option:focus, select option:hover, select option:checked {
         grid-template-columns: 1fr;
     }
 
-.card-att {
+.card-att-box {
     display: grid;
     background: #f7f7f7;
     box-shadow: inset 0 0 10px #00000010;
     text-align: center;
+    border-radius: 6px;
 }
-    .card-att span, .list-att span {
-        display: none;
-    }
-
     .card-inner-grid > * {
         padding: 4px 8px;
         border-radius: 6px;
@@ -322,9 +323,6 @@ select option:focus, select option:hover, select option:checked {
             background-color: #f8f9fa;
         }
         
-.d-none {
-    display: none !important;
-}
 
 .chevron-container {
     text-align: center;
@@ -339,21 +337,20 @@ select option:focus, select option:hover, select option:checked {
 
 /* From 768px */
 @media(width > 768px) {
+
+    #pag-nav .btn {
+        min-width: 80px !important;
+    }
     .attendance-card {
-        grid-template-columns: 4fr 3fr 1fr;
+        grid-template-columns: 6fr 3fr 1fr;
     }
     .card-inner-grid:nth-child(1) {
         grid-template-columns: 1fr 2fr;
     }
-    .card-att {
+    .card-att-box {
         text-align: left;
+        margin-right: 5vw;
     }
-        .card-att span, .list-att span {
-            display: block;
-        }
-        .card-att i, .list-att i {
-            display: none;
-        }
 }
 
 /* From 1200px */
@@ -361,7 +358,7 @@ select option:focus, select option:hover, select option:checked {
     .attendance-card {
         grid-template-columns: 6fr 4fr 1fr;
     }
-    .card-att {
+    .card-att-box {
         grid-template-columns: 3fr 1fr;
         align-content: center;
     }
